--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
