.env file with api and json-server routes for production

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-REACT_APP_API_BASE_URL=http://<your-ip>:5000/
+
+# //! rota api github
+REACT_APP_API_BASE_URL=http://api.github.com/
+
+# //! rota json-server
+REACT_APP_API_BASE_URL=http://localhost:5000/
